# prototype

./: .dockerignore  .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  README.md  fly.toml  hive.nix  package-lock.json  package.json  run.sh
.github/workflows/: ci.yml  fly.yml
apps/web/: next.config.js  package.json
apps/web/components/common/: Body.tsx  Favicon.tsx  Footer.tsx  HexPath.tsx  HiveIcon.tsx  LadybugIcon.tsx  MosquitoIcon.tsx  NavText.tsx
apps/web/components/forms/: CardPicker.tsx  FinishProfileForm.tsx  FormSubmitButtonProps.ts  RadioCard.tsx  SignUpEmailForm.tsx  SignUpForm.tsx
apps/web/components/game-common/: BoardControls.tsx  Bug.tsx  BugSymbols.tsx  Hex.tsx  HexGhost.tsx  HexGhostValidMove.tsx  Hive.tsx  NotationView.tsx  Table.tsx  TileStack.tsx  ValidMovesOverlay.tsx
apps/web/components/game-online/: GameOnlineGameControls.tsx  GameOnlineHands.tsx  GameOnlineMessage.tsx  GameOnlineSidebar.tsx  HandGrid.tsx
apps/web/components/lists/: Header.tsx  ListLobbyGames.tsx  ListPlayerCompleted.tsx  ListPlayerGames.tsx  ListPlayerInvitations.tsx  ListPublicGames.tsx  Row.tsx
apps/web/components/modals/: InviteModal.tsx  SignInModal.tsx
apps/web/components/nav/: HiveLogoLink.tsx  NavBar.tsx  NotificationsBell.tsx  SignInLink.tsx  Username.tsx
apps/web/contexts/notifications/: NotificationProvider.tsx  README.md  notification.ts  notificationReducer.ts
apps/web/hooks/: useTitle.ts
apps/web/pages/: _app.tsx  _document.tsx  community.tsx  games.tsx  index.tsx  profile.tsx  register.tsx
apps/web/pages/game/: [gameid].tsx
apps/web/public/: site.webmanifest
apps/web/state/game-online/: hooks.ts  selectors.ts  store.ts
apps/web/styles/: theme.ts
backend/: Cargo.toml
backend/migrations/2023-02-24-030452_create_users/: up.sql
backend/migrations/2023-03-10-004745_game_challenge/: down.sql  up.sql
backend/migrations/2023-03-10-144729_create_games/: up.sql
backend/migrations/2023-03-10-145145_create_games_users/: down.sql  up.sql
backend/migrations/2023-04-29-095954_create_ratings/: down.sql  up.sql
backend/migrations/2023-06-11-113234_create_ratings/: down.sql  up.sql
backend/src/: config.rs  lib.rs  main.rs  schema.rs  server_error.rs  static_files.rs  test.rs
backend/src/api/: board.rs  health.rs  mod.rs  play_request.rs  token.rs  user.rs
backend/src/api/game/: challenge.rs  game_state_response.rs  lobby.rs  mod.rs  play.rs  show.rs
backend/src/api/game/challenge/: accept.rs  create.rs  delete.rs  game_challenge_response.rs  mod.rs  show.rs
backend/src/api/user/: challenges.rs  create.rs  create_guest.rs  edit.rs  games.rs  mod.rs  show.rs  user_response.rs
backend/src/db/: mod.rs  schema.rs  util.rs
backend/src/extractors/: auth.rs
backend/src/model/: challenge.rs  game.rs  game_request.rs  game_response.rs  games_users.rs  mod.rs  ratings.rs  user.rs
backend/src/types/: color.rs
backend/src/websockets/: echo.rs
backend/tests/: health.rs
engine/: Cargo.toml  game.txt
engine/src/: board.rs  bug.rs  bug_stack.rs  color.rs  direction.rs  game_control.rs  game_error.rs  game_result.rs  game_status.rs  game_type.rs  hasher.rs  hex.rs  history.rs  lib.rs  main.rs  moves.rs  negative_space.rs  piece.rs  player.rs  position.rs  spiral_array.rs  state.rs  torus_array.rs
frontend/: .gitignore  .prettierrc.js  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  turbo.json
frontend/.cargo/: config
frontend/apps/web/: next.config.js
frontend/apps/web/components/common/: PillbugIcon.tsx
frontend/apps/web/components/forms/: FinishProfileForm.tsx  GuestButton.tsx  SignInEmailForm.tsx
frontend/apps/web/components/game-common/: GameControls.tsx
frontend/apps/web/components/game-online/: GameOnline.tsx
frontend/apps/web/components/lists/: ListPlayerGames.tsx  ListUsers.tsx
frontend/apps/web/components/lists/items/: ElapsedTimeItem.tsx  ExpansionsItem.tsx
frontend/apps/web/components/modals/: SignInModal.tsx
frontend/apps/web/contexts/notifications/: notificationReducer.ts
frontend/apps/web/pages/: profile.tsx
frontend/apps/web/pages/game/: [gameid].tsx
frontend/apps/web/state/game-online/: game.ts  selectors.ts  slice.ts
frontend/src/: lib.rs  main.rs  router.rs
frontend/src/components/: mod.rs
frontend/src/components/common/: mod.rs  piecetype.rs  svgpos.rs
frontend/src/components/molecules/: boardpiece.rs  destination.rs  flatpiece.rs  lastmove.rs  mod.rs  stackedpieces.rs
frontend/src/components/organisms/: board.rs  mod.rs  navbar.rs  playboard.rs  reserve.rs
frontend/src/components/pages/: game.rs  get.rs  home.rs  mod.rs  play.rs  review.rs  ws_echo.rs
frontend/src/components/svgs/: bugs.rs  mod.rs
frontend/src/stores/: gamestate.rs  mod.rs
frontend/src/stylesheets/: blink.css  flatpieces.rs  mod.rs
hive/: run.sh
hive/engine/src/: lib.rs
hive/frontend/: index.html
hive/frontend/.cargo/: config
js/: README.md  package-lock.json  package.json
js/frontend/: next.config.js  package.json  tailwind.config.js
js/frontend/components/common/: LadybugIcon.tsx  MosquitoIcon.tsx  Nav.tsx  NavLink.tsx  PillbugIcon.tsx
js/frontend/components/forms/: CardPicker.tsx  GoogleButton.tsx
js/frontend/hooks/: useHasMounted.ts  usePlayerChallenges.ts
js/frontend/pages/: community.tsx  games.tsx  index.tsx
js/hive-db/: index.tsx
js/hive-db/src/: PlayerProvider.tsx  api.ts
js/hive-lib/: README.md
js/hive-lib/src/: board.ts  hand.ts  index.ts  move.test.ts  notation.test.ts  notation.ts  queen.ts  types.ts
oci-images/: backend  compose.yml  frontend
src/: board.rs  bug.rs  color.rs  hasher.rs  history.rs  main.rs  moves.rs  piece.rs  player.rs  position.rs  state.rs
(+54 files in other folders)
