[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-cors = "*"
actix-web = { version = "4.2.1" }
actix-web-actors = "*"
env_logger = "*"
fnv = "1.0.3"
log = "*"
actix-files = "*"
oauth2 = "4.2.3"
serde = { version = "*", features = ["derive"] }
serde_with = "2.2.*"
jsonwebtoken-google = "0.1.6"
serde_json = "1.0.*"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.2.0", features = ["postgres", "bb8"] }
bb8 = { version = "0.8.0" }
dotenvy = "0.15"
hive = { path = "../engine/" }
futures-util = { version = "*", default-features = false, features = ["std", "sink"] }
uuid = { version = "*", features = ["v4", "v7", "serde"] }
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
reqwest = "0.11.14"
alcoholic_jwt = "4091.0.0"
thiserror = "1.0.*"
chrono = { version = "0.4.23", features = ["serde"] }
