[package]
name = "hive"
version = "0.1.0"
edition = "2021"

[lib]
name = "hive_lib"
path = "src/lib.rs"

[[bin]]
name = "hive_bin"
path = "src/main.rs" # replace bin.rs with name of your file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "*"
regex = "*"
sha2 = "*"
hex-literal = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
thiserror = "*"
fnv = "1.0.3"

[profile.release]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
