[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
opt-level = 'z'
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4"
yew = "*"
gloo = "*"
serde = "*"
serde_json = "*"
stylist = { version = "*", features = ["yew", "yew_integration"] }
wasm-bindgen = "*"
web-sys = { version = "*", features = ["HtmlInputElement"] }
yew-oauth2 = "*"
yew-router = "*"
yew-hooks = "*"
yewdux = "*"
gloo-net = "*"
wasm-bindgen-futures = "*"
hive = { path = "../engine" }
