[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
opt-level = 'z'
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.*"
yew-router = "0.17.*"
yewdux = "0.9.*"
yew-hooks = "0.2.*"
stylist = { version = "0.11.*", features = ["yew", "yew_integration"] }
wee_alloc = "0.4"
yew-oauth2 = "*"
gloo = "0.4.2"
serde = "1.0.*"
serde_json = "1.0.*"
wasm-bindgen = "0.2.*"
web-sys = { version = "*", features = ["HtmlInputElement"] }
gloo-net = "*"
wasm-bindgen-futures = "*"
hive = { path = "../engine" }
